--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html id="htmlRoot" lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>{% block title %}<span data-translate="homestay-booking">Horin</span>{% endblock %}</title>
     
     <!-- Bootstrap CSS -->
